--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@ kbd {
 </blockquote>
 
 <p><details>
-<summary>Thesis Research - TrafficTurk</summary></p>
+<summary>Thesis Research - TrafficTurk (Click to expand)</summary></p>
 
 <blockquote>
 <ul>
@@ -385,7 +385,7 @@ kbd {
 </blockquote>
 
 <p><details>
-<summary>Additional Graduate Research – Marketing and Product Development</summary></p>
+<summary>Additional Graduate Research – Marketing and Product Development (Click to expand)</summary></p>
 
 <blockquote>
 <ul>
